--- a/assets/css/styles.css
+++ b/assets/css/styles.css
@@ -15,10 +15,10 @@ h1, h2, h3, h4, h5, h6 {
 
 a {
   color: #0288D1;
-  -webkit-transition: all 0.4s ease-in-out;
-  -moz-transition: all 0.4s ease-in-out;
-  -ms-transition: all 0.4s ease-in-out;
-  -o-transition: all 0.4s ease-in-out;
+  -webkit-transition: all 0.2s ease-in-out;
+  -moz-transition: all 0.2s ease-in-out;
+  -ms-transition: all 0.2s ease-in-out;
+  -o-transition: all 0.2s ease-in-out;
 }
 
 a:hover {
@@ -32,10 +32,10 @@ a:focus {
 }
 
 .btn, a.btn {
-  -webkit-transition: all 0.4s ease-in-out;
-  -moz-transition: all 0.4s ease-in-out;
-  -ms-transition: all 0.4s ease-in-out;
-  -o-transition: all 0.4s ease-in-out;
+  -webkit-transition: all 0.2s ease-in-out;
+  -moz-transition: all 0.2s ease-in-out;
+  -ms-transition: all 0.2s ease-in-out;
+  -o-transition: all 0.2s ease-in-out;
   font-family: 'Montserrat', arial, sans-serif;
   padding: 8px 16px;
   font-weight: bold;
@@ -60,8 +60,8 @@ a.btn-cta-primary, .btn-cta-primary {
 }
 
 a.btn-cta-primary:hover, .btn-cta-primary:hover {
-  background: #01579B;
-  border: 1px solid #01579B;
+  background: #0277BD;
+  border: 1px solid #0277BD;
   color: #fff;
 }
 
@@ -121,8 +121,10 @@ a.dotted-link:hover {
 
 .header .profile-image {
   margin-right: 30px;
-  height: 230px;
-  width: 230px;
+  height: 20%;
+  width: 20%;
+  min-height: 150px;
+  min-width: 150px;
   border-radius: 50%;
   object-fit: cover;
   object-position: 100% 0;
@@ -290,6 +292,7 @@ a.dotted-link:hover {
 .latest .has-ribbon .text {
   background: #0288D1;
   color: #fff;
+  size: 30px;
 }
 
 .latest .has-ribbon .ribbon {
@@ -308,12 +311,12 @@ a.dotted-link:hover {
   top: 18px;
   width: 158px;
   padding: 10px 10px;
-  font-size: 15px;
+  font-size: 11px;
   font-weight: bold;
   text-align: center;
   text-transform: uppercase;
   color: #fff;
-  background-color: #479FC8;
+  background-color: #0288D1;
   -webkit-transform: rotate(45deg) translate3d(0, 0, 0);
   -moz-transform: rotate(45deg) translate3d(0, 0, 0);
   -ms-transform: rotate(45deg) translate3d(0, 0, 0);
@@ -386,6 +389,7 @@ a.dotted-link:hover {
   color: #999;
   font-weight: normal;
 }
+
 
 /* Git section */
 .github-graph {
@@ -468,7 +472,7 @@ a.dotted-link:hover {
 
 .skills .skillset .level-bar-inner {
   height: 15px;
-  background: #0288D1;
+  background: red;
 }
 
 .skills .svg-inline--fa {
@@ -542,6 +546,11 @@ a.dotted-link:hover {
 
 .education .item .university .year {
   color: #b0b7bf;
+  font-weight: 500;
+}
+
+.education .item .university .edu_desc {
+  color: #999;
   font-weight: 500;
 }
 
@@ -648,14 +657,14 @@ a.dotted-link:hover {
   padding: 10px 0;
 }
 
-.footer .copyright {
+.footer .copyright { /* "Design by" */
   line-height: 1.6;
   color: #a1aab4;
   font-size: 14px;
 }
 
 .footer a {
-  color: #fff;
+  color: #a1aab4;
 }
 
 .footer .fa-heart {
